Update to 1.19.2, add lingering potion of bees